Changes since labca_3_5_4:
Changes since labca_3_5_3:
	2017/08/18 (HS):
	- Removed RELEASE_SITE file and added it to .gitignore.
Changes since labca_3_5_2:
	2017/08/11 (TS):
	 - replaced CVS $Id$/$Name$ in manual.tex and glue/ini.cc by git description strings
	2017/08/11 (TS):
	 - fixed manual.tex (warnings due to new html.sty)
	2017/08/11 (TS):
	 - removed CVS $Id$ keywords
	2017/08/11 (TS):
	 - added test case for recent bugfix
	2017/08/10 (TS):
	 - merged changes from labca_3_5_branch
Changes since labca_3_5_1:
	2017/08/10 (TS):
	 - use psed/sed everywhere (SED defined in configure/CONFIG)
Changes since labca_3_5_0:
	2017/08/08 (TS):
	 - use sed on linux, psed on windows (perl 5.22 stopped shipping psed)
	2017/08/08 (TS):
	 - BUGFIX (thanks to Jesus Vasquez for reporting). When retrieving
	   DBF_LONG in native format, result was inadvertently converted to float
	   and then promoted to double which lead to a loss in precision.
	2015/09/08 (TS):
	 - fixed test script (didn't catch all partial enum string mismatch)
	 - fixed test script (matlab compatibility)
Changes since labca_3_4_2:
	2015/09/08 (TS):
	 - replaced #include <tsDefs.h> by <epicsTime.h>
	 - replaced obsolete TS_STAMP by epicsTimeStamp (TS_STAMP is a macro
	   for the latter under reasonably recent base)
	2015/06/04 (TS):
	 - RENAMED lcaGetEnumStates -> lcaGetEnumStrings
	2015/06/04 (TS):
	 - matlab/lcaGetEnumStates.c, matlab/Makefile: added lcaGetEnumStates()
	 - matlab/lcaDebugOn.c, matlab/lcaDebugOff.c, matlab/Makefile: added
	   lcaDebugOn()/lcaDebugOff().
	 - ezca/ezca.c, ezca/ezca.h: added ezcaGetEnumStates()
	 - glue/labca.sce.in, glue/ezcaSciInt.c: changed names from ezca->labca.
	   Added helper to unload labca. Added lcaGetEnumStates()
	 - testing/lcaTest.sce, testing/lcaTest.m: added tests for lcaGetEnumStates()
	2015/06/03 (TS):
	- Reorganized ezcaGetPrecision(), ezcaGetUnits(), ezcaGetNelem(),
	  ezcaGetStatus(), getLimits() (which is now getInfo()) to share