@@ -1,4 +1,7 @@
 Changes since labca_3_5_4:
+	2018/02/12 (TS):
+	- removed mexLock from initialization code (breaks matlab 2017;
+	  see email thread with mathworks/J. Sebek, 12/9/2017)
 Changes since labca_3_5_3:
 	2017/08/18 (HS):
 	- Removed RELEASE_SITE file and added it to .gitignore.
